--- a/vignettes/getting_started-vignette.Rmd
+++ b/vignettes/getting_started-vignette.Rmd
@@ -17,9 +17,11 @@ knitr::opts_chunk$set(
 ```
 
 # Introduction
-In forensic genetics, the number of alleles in a mixed DNA profile is often used to gauge the number of contributors to the mixture. Specifically, two statistics are relevant: the total allele count (TAC) across all loci and the maximum allele count (MAC) across the loci. TAC is informative of the number of contributors. MAC can be used as a lower bound: if a mixture has more than $2n$ alleles at a locus (MAC exceeds $2n$) then there are at least $n+1$ mixture donors. For example, if there is a locus with five alleles (MAC=5), then the mixture can not have originated from two donors.
+In forensic genetics, the number of alleles in a mixed DNA profile is often used to gauge the number of contributors to the mixture. Two statistics are relevant: the total allele count (TAC) across all loci and the maximum allele count (MAC) across the loci. TAC is informative of the number of contributors. MAC can be used as a lower bound: if a mixture has more than $2n$ alleles at a locus (MAC exceeds $2n$) then there are at least $n+1$ mixture donors. For example, if there is a locus with five alleles (MAC=5), then the mixture can not have originated from two donors.
 
-
+# TAC curves
+The **numberofalleles** package has functionality to compute the probability distribution of the TAC for a given number of contributors. Optionally, subpopulation correction and dropout can be modelled.
+First, we load the package and read the allele frequencies.
 ```{r setup}
 library(numberofalleles)
 library(ggplot2)
@@ -33,7 +35,7 @@ gf_loci <- c("D3S1358", "vWA", "D16S539", "CSF1PO", "TPOX", "D8S1179", "D21S11",
              "D2S1338")
 ```
 
-
+Then, we call the **pr_total_number_of_distinct_alleles** function for $n=1,\ldots,6$ contributors and obtain the TAC curve.
 ```{r TAC}
 p_by_n <- list()
 
@@ -46,9 +48,9 @@ for (i in 1:6){
              p = as.vector(p))
 }
 ```
-
-```{r TAC_plot}
+We use **ggplot2** to plot the curves.
+```{r fig.asp = 0.4, fig.width = 7}
 ggplot(subset(do.call(rbind, p_by_n), p > 1e-5)) + 
   aes(x = number_of_alleles, y = p, colour = n) + 
-  geom_point() + geom_line() + xlim(0, 150)
+  geom_point() + geom_line() + xlim(0, 150) + theme_bw()
 ```
